# cli-chess

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
dev_tools/: build.ps1  commit_count.ps1  coverage.ps1  hack_run.py  inital_thoughts.md  new_venv.ps1  pallet.py  publish.ps1  todo.md
docs/plan/: entry1.md  entry2.md  todo.md
src/clichess/: main.py
src/jchess/: __init__.py  __main__.py  __pkginfo__.py  _version.py  action.py  board.py  configs.py  constants.py  demo_colorama.py  display.py  engine.py  game.py  geometry.py  logic.py  main.py  pallet.py  pieces.py  py.typed  run.py  squares.py  state.py  terminal.py  testutils.py  utils.py
src/jchess/dev_tools/: __init__.py  coverage.ps1  display_colors.py  pallet.py  version.py
src/jchess/display/: __init__.py  _class.py  _configs.py  _constants.py  elements.py
src/jchess/game/: __init__.py  display.py  engine.py  gui.py  logic.py  state.py  visuals.py
src/jchess/state/: __init__.py  _bdisplay.py  _pdisplay.py  _state.py
src/jchess/terminal/: __init__.py  _linux.py  _windows.py
src/stubs/: __main__.pyi  _version.pyi  configs.pyi  display.pyi  geometry.pyi  jchess.pyi  pieces.pyi
src/stubs/game/: engine.pyi  logic.pyi  state.pyi  visuals.pyi
tests/: test_code_quality.py  test_display.py  test_geometry.py  test_pieces.py  test_squares.py  utils.py
tests/test_jchess/: __init__.py  test_board.py  test_game.py  test_geometry.py  test_main.py  test_pieces.py  test_run.py  test_state.py
tests/test_jchess/data/: bishop.ssv  castling.ssv  check_prevention.ssv  king.ssv  king2.ssv  knight.ssv  pawn.ssv  queen.ssv  rook.ssv  stalemate.ssv
tests/test_jchess/test_state/: __init__.py  test_pawn.py
