[build-requires]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jchess"
authors = [
    # author doesn't appear (properly) in `pip show` :(
    { name="j-hil", email="92876062+j-hil@users.noreply.github.com" },
]
description = "Chess in the command line."
readme = "README.md"
license = {text="GNU General Public License v3 (GPLv3)"}
keywords = ["chess"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 1 - Planning"
]
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.5, <1",
    "psutil>=5.9.2, <6",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "mypy>=0.971, <1",
    "types-psutil>=5.9.5, <6",
    "types-colorama>=0.4.15, <1",
    "black>=22.8.0",
    "pylint>=2.15.2, <3",
    "pydocstyle>=6.1.1, <3",
]

[project.urls]
# doesn't appear in `pip show` :(
"homepage" = "https://j-hil@github.com/j-hil/cli-chess.git"

[tool.setuptools.dynamic]
version = {attr="jchess._version.VERSION"}

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.pylint.basic]
# allows short names (which are to be used with due consideration):
argument-rgx = "(?#snake_case)^[a-z0-9]*(_[a-z0-9]+)*_?$"
variable-rgx = "(?#snake_case)^[a-z0-9]*(_[a-z0-9]+)*_?$"
attr-rgx = "(?#snake_case)^[a-z0-9]*(_[a-z0-9]+)*_?$"
const-rgx = "(?#CAPITAL_CASE)^[A-Z0-9]*(_[A-Z0-9]+)*_?|__[a-z]*__$"

[tool.pylint.format]
max-line-length=88

[tool.pylint.messages_control]
# I decide if something needs a docstring, not pylint or pydocstyle :|
disable = ["missing-function-docstring", "missing-class-docstring",]

[tool.pylint.reports]
output-format = "colorized"

[tool.pydocstyle]
ignore = [
    "D1",  # Missing docstrings
    "D213",  # Multi-line docstring summary should start at the second line
    "D203",  # 1 blank line required before class docstring (found 0)
]



