[metadata]
name = jchess
version = 22.10.63
url = https://j-hil@github.com/j-hil/cli-chess.git
description = Chess in the command line.
long_description = file: README.md
author = j-hil
author_email = 92876062+j-hil@users.noreply.github.com
keywords = chess, cli
license = GNU General Public License v3 (GPLv3)
license_files = LICENSE,
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
    Development Status :: 1 - Planning

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.10
setup_requires =
    setuptools>=65
install_requires =
    colorama>=0.4.5, <1
    psutil>=5.9.2, <6

[optinos.extras_require]
dev =
    mypy>=0.971, <1
    types-psutil>=5.9.5, <6
    types-colorama>=0.4.15, <1
    black>=22.8.0
    pylint>=2.15.2, <3
    pydocstyle>=6.1.1, <3

[options.packages.find]
where = src
exclude =
    examples*
    tools*
    docs*
    my_package.tests*

[mypy]
warn_return_any = True
warn_unused_configs = True
show_error_codes = True
# required due to a mypy issue: https://github.com/python/mypy/issues/3004
disable_error_code = assignment,

[pylint.basic]
# allows short names (which are to be used with due consideration):
argument-rgx = (?#snake_case)^[a-z0-9]*(_[a-z0-9]+)*_?$
variable-rgx = (?#snake_case)^[a-z0-9]*(_[a-z0-9]+)*_?$
attr-rgx = (?#snake_case)^[a-z0-9]*(_[a-z0-9]+)*_?$
const-rgx = (?#CAPITAL_CASE)^[A-Z0-9]*(_[A-Z0-9]+)*_?|__[a-z]*__$

[pylint.format]
max-line-length=88

[pylint.design]
# the defualt (7) really is too low
max-attributes=10

[pylint.messages_control]
# I decide if something needs a docstring, not pylint or pydocstyle :|
disable =
    missing-function-docstring,
    missing-class-docstring

[pylint.reports]
output-format = colorized

[pydocstyle]
ignore =
    D1  # Missing docstrings
    D213  # Multi-line docstring summary should start at the second line
    D203  # 1 blank line required before class docstring (found 0)